package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
)

load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)

load(
    "//defs/toolchain:backend.bzl",
    "werkzeug_test",
    "werkzeug_library",
    "werkzeug_application",
    "micronaut_test",
    "micronaut_library",
    "micronaut_controller",
    "micronaut_application",
    "micronaut_native_configset",
)


model(
    name = "salutation",
    srcs = ["salutation.proto"],
)

model(
    name = "context",
    srcs = ["context.proto"],
    deps = [":salutation"],
)

filegroup(
    name = "reflection-config",
    srcs = ["reflection.json"],
)

template_library(
    name = "ssr",
    srcs = ["ssr.soy"],
    proto_deps = [":context"],
)

micronaut_library(
    name = "SSRTemplateLoader",
    srcs = ["SSRTemplateLoader.kt"],
    templates = [":ssr"],
)

micronaut_controller(
    name = "SSRKotlinController",
    srcs = ["SSRKotlinController.kt"],
    protos = [":context"],
    templates = [":ssr"],
)

micronaut_native_configset(
    name = "ssr-native-config",
    srcs = glob(["META-INF/native-image/*.json"]),
    resource_strip_prefix = "javatests/ssr/",
)

micronaut_application(
    name = "SSRTestApplication",
    native = True,
    controllers = [":SSRKotlinController"],
    repository = "$(project)/gust/tests/ssr/jvm",
    template_loader = ":SSRTemplateLoader",
    native_repository = "$(project)/gust/tests/ssr/native",
    reflection_configuration = ":reflection-config",
)

micronaut_test(
    name = "SSRBasicTest",
    srcs = ["SSRBasicTest.java"],
    deps = [":SSRKotlinController"],
    test_class = "javatests.ssr.SSRBasicTest",
)
