##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_module",
    "ts_module",
)


alias(
    name = "base",
    actual = "@node_base//image",
)

ts_module(
    name = "init",
    srcs = ["init.ts"],
    runtime = "node",
    deps = [
        ":logging",
        "@npm//@feathersjs/express",
        "@npm//@feathersjs/feathers",
        "@npm//@types/express",
    ]
)

ts_module(
    name = "logging",
    srcs = ["logging.ts"],
    runtime = "node",
    deps = [
        "@npm//winston",
        "@npm//@types/winston",
    ]
)

ts_module(
    name = "app",
    srcs = ["app.ts"],
    runtime = "node",
    deps = [
        ":logging",
        ":init",
        "@npm//express",
        "@npm//@types/node",
        "@npm//@types/express",
        "@npm//@feathersjs/feathers",
    ],
)

ts_module(
    name = "main",
    srcs = ["main.ts"],
    runtime = "node",
    deps = [
        ":app",
    ],
)
