package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs:proto.bzl",
    "proto",
    "proto_module",
)

## Core
proto(
    name = "Datamodel",
    srcs = ["Datamodel.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


proto_module(
    name = "core",
    deps = [":Datamodel"],
)
