package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
    "model_package",
)

## Core
model(
    name = "Datamodel",
    srcs = ["Datamodel.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)


model_package(
    name = "core",
    deps = [":Datamodel"],
)
