##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/model:model.bzl",
    "model",
)
load(
    "//tools/defs/model:internals.bzl",
    "well_known",
)


##
# Builtin protos
##

well_known(
    name = "any",
    actual = "@com_google_protobuf//:any_proto",
)

well_known(
    name = "duration",
    actual = "@com_google_protobuf//:duration_proto",
)

well_known(
    name = "empty",
    actual = "@com_google_protobuf//:empty_proto",
)

well_known(
    name = "field_mask",
    actual = "@com_google_protobuf//:field_mask_proto",
)

well_known(
    name = "struct",
    actual = "@com_google_protobuf//:struct_proto",
)

well_known(
    name = "timestamp",
    actual = "@com_google_protobuf//:timestamp_proto",
)

well_known(
    name = "wrappers",
    actual = "@com_google_protobuf//:wrappers_proto",
)


##
# Common protos
##

well_known(
    name = "timeofday",
    actual = "@proto_common//:type_timeofday",
)

well_known(
    name = "quaternion",
    actual = "@proto_common//:type_quaternion",
)

well_known(
    name = "postal_address",
    actual = "@proto_common//:type_postal_address",
)

well_known(
    name = "month",
    actual = "@proto_common//:type_month",
)

well_known(
    name = "latlng",
    actual = "@proto_common//:type_latlng",
)

well_known(
    name = "fraction",
    actual = "@proto_common//:type_fraction",
)

well_known(
    name = "expr",
    actual = "@proto_common//:type_expr",
)

well_known(
    name = "dayofweek",
    actual = "@proto_common//:type_dayofweek",
)

well_known(
    name = "date",
    actual = "@proto_common//:type_date",
)

well_known(
    name = "color",
    actual = "@proto_common//:type_color",
)

well_known(
    name = "calendar_period",
    actual = "@proto_common//:type_calendar_period",
)


## Core
model(
    name = "crypto",
    srcs = ["crypto.proto"],
    deps = [
        ":datamodel",
    ],
)

model(
    name = "data",
    srcs = ["data.proto"],
    deps = [
        ":crypto",
        ":datamodel",
    ],
)

model(
    name = "datamodel",
    srcs = ["datamodel.proto"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)
