package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "//defs/toolchain/java:testing.bzl",
    "browser_test_java",
)

load(
    "//defs/toolchain:deps.bzl",
    "closure",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_app",
    "js_test",
    "js_module",
)


#cross_lib(
#    name = "DomOperation",
#    srcs = ["DomOperation.java"],
#    elemental = ["dom"],
#    deps = ["//java/gust:Core"],
#)
#
#js_test(
#    name = "basic-dom-js-test",
#    srcs = ["dom_test.js"],
#    deps = [
#        ":DomOperation-j2cl",
#        "//java/gust:core",
#        closure("dom"),
#        closure("dom", "TagName"),
#    ],
#    html = "dom_test.html",
#    entry_points = ["javatests.dom.dom_test"],
#)

#browser_test_java(
#    name = "basic-dom-browser-test",
#    srcs = ["DomBrowserTest.java"],
#    test_class = "javatests.dom.DomBrowserTest",
#)
