##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "//defs/toolchain/java:testing.bzl",
    "browser_test_java",
)

load(
    "//defs/toolchain:deps.bzl",
    "closure",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_app",
    "js_test",
    "js_module",
)


cross_lib(
    name = "DomOperation",
    srcs = ["DomOperation.java"],
    elemental = ["dom"],
    deps = ["//java/gust:Core"],
)

js_test(
    name = "basic-dom-js-test",
    srcs = ["dom_test.js"],
    deps = [
        ":DomOperation-j2cl",
        "//java/gust:core",
        closure("dom"),
        closure("dom", "TagName"),
    ],
    html = "dom_test.html",
    entry_points = ["tests.dom.dom_test"],
)

#browser_test_java(
#    name = "basic-dom-browser-test",
#    srcs = ["DomBrowserTest.java"],
#    test_class = "javatests.dom.DomBrowserTest",
#)
