package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_app",
    "js_module",
    "ts_module",
)


cross_lib(
    name = "JavaObject",
    srcs = ["JavaObject.java"],
)

js_module(
    name = "main",
    srcs = ["main.js"],
    deps = [
        ":JavaObject-j2cl",
        "//java/gust:Core-j2cl",
    ],
)

js_app(
    name = "example",
    entry_points = ["main"],
    deps = [":main"],
)
