##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_app",
    "js_module",
    "ts_module",
)


cross_lib(
    name = "JavaObject",
    srcs = ["JavaObject.java"],
)

js_module(
    name = "main",
    srcs = ["main.js"],
    deps = [
        ":JavaObject-j2cl",
        "//java/gust:Core-j2cl",
    ],
)

js_app(
    name = "example",
    entry_points = ["main"],
    deps = [":main"],
)
