##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

load(
    "//defs/toolchain:schema.bzl",
    "model",
)

load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)

load(
    "@io_bazel_rules_sass//:defs.bzl",
    "sass_binary",
)

load(
    "//defs/toolchain/style:rules.bzl",
    "style_binary",
    "style_library",
)

load(
    "//defs/toolchain/testing:file_test.bzl",
    "file_test",
)


model(
    name = "salutation",
    srcs = ["salutation.proto"],
)

model(
    name = "context",
    srcs = ["context.proto"],
    deps = [":salutation"],
)

model(
    name = "person_name",
    srcs = ["person_name.proto"],
)

model(
    name = "template_context",
    srcs = ["template_context.proto"],
    deps = [":person_name"],
)

template_library(
    name = "simple",
    srcs = ["simple.soy"],
)

template_library(
    name = "second",
    srcs = ["second.soy"],
    soy_deps = [
        ":simple",
    ],
    proto_deps = [
        ":template_context",
    ]
)

template_library(
    name = "styled",
    srcs = ["styled.soy"],
    python = False,
    style_deps = [
        "//tests/style:mod2",
    ],
    proto_deps = [
        ":context",
        ":salutation",
    ],
)
