##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_sass//:defs.bzl",
    "sass_binary",
)

load(
    "//defs/toolchain/style:rules.bzl",
    "style_binary",
    "style_library",
)

load(
    "//defs/toolchain/testing:file_test.bzl",
    "file_test",
)


## -- Tests -- ##

style_library(
    name = "example1",
    srcs = ["_example1.scss"],
)

style_library(
    name = "example2",
    srcs = ["_example2.sass"],
)

style_binary(
    name = "basic",
    src = "basic.scss",
    deps = [
        ":example1",
        ":example2",
    ],
)

sass_binary(
    name = "sass_compressed",
    src = "basic.scss",
    sourcemap = False,
    output_name = "sass_compressed.css",
    output_style = "compressed",
    deps = [
        ":example1",
        ":example2",
    ],
)

style_binary(
    name = "vendor",
    src = "vendor.scss",
    plugins = ["autoprefixer"],
    deps = [
        ":example1",
        ":example2",
    ],
)

style_library(
    name = "mod1",
    srcs = ["_mod1.gss"],
)

style_library(
    name = "mod2",
    srcs = ["_mod2.gss"],
)

style_binary(
    name = "gss_example",
    plugins = ["autoprefixer"],
    deps = [
        ":mod1",
        ":mod2",
    ],
)

style_binary(
    name = "gss_opt_default_example",
    plugins = ["autoprefixer", "cssnano"],
    deps = [
        ":mod1",
        ":mod2",
    ],
)

style_binary(
    name = "gss_opt_advanced_example",
    config = "postcss_advanced.json",
    plugins = [
        "autoprefixer",
        "cssnano",
    ],
    deps = [
        ":mod1",
        ":mod2",
    ],
)


## -- Tests -- ##

file_test(
    name = "basic_test",
    file = ":basic.css",
    content = ".hello{background:#ff0}.hello .inner{background:red}.hello .inner p{background:purple}.hello .inner p span{background:green}",
)

file_test(
    name = "compressed_test",
    file = "sass_compressed.css",
    content = ".hello{background:#ff0}.hello .inner{background:red}.hello .inner p{background:purple}.hello .inner p span{background:green}",
)

file_test(
    name = "autoprefixer_test",
    file = "vendor.css",
    content = """.hello {
  background: yellow;
}
.hello .inner {
  background: red;
}
.hello .inner p {
  background: purple;
}
.hello .inner p span {
  background: green;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}""",
)

file_test(
    name = "gss_test",
    file = ":gss_example",
    content = """.test {
  color: blue;
}
.hello {
  background: pink;
}
.hello {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.goodbye {
  background: green;
}""",
)

file_test(
    name = "gss_opt_default_test",
    file = ":gss_opt_default_example",
    content = ".test{color:#00f}.hello{background:pink;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.goodbye{background:green}",
)

file_test(
    name = "gss_opt_advanced_test",
    file = ":gss_opt_advanced_example",
    content = ".test{color:#00f}.hello{background:pink;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.goodbye{background:green}",
)
