##
# Copyright © 2022, The Elide Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//tools/defs/java:java.bzl",
    "maven",
    "java_binary",
)
load(
    "//tools/defs/model:model.bzl",
    "javaproto",
)

_COMMON_DEPS = [
    "@com_google_errorprone_error_prone_annotations",
    maven("javax.annotation:javax.annotation-api"),
    maven("com.google.protobuf:protobuf-java"),
    maven("com.google.protobuf:protobuf-java-util"),
    maven("com.google.code.findbugs:jsr305"),
    maven("com.google.guava:guava"),
    maven("org.slf4j:slf4j-api"),
]


java_binary(
    name = "AssetBundler",
    srcs = ["AssetBundler.java"],
    main_class = "tools.bundler.AssetBundler",
    deps = [
        "//java/elide/util:Pair",
        "//java/elide/util:Hex",
        javaproto("//proto/core:crypto"),
        javaproto("//proto/core:data"),
        javaproto("//proto/assets:bundle"),
        javaproto("//proto/page:page"),
        maven("info.picocli:picocli"),
        maven("io.reactivex.rxjava2:rxjava"),
        "@com_google_template_soy",
    ] + _COMMON_DEPS,
    runtime_deps = [
        "@com_google_template_soy",
        maven("ch.qos.logback:logback-classic"),
    ],
    classpath_resources = [
        "//tools:logback.xml",
    ],
)
