##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "@rules_java//java:defs.bzl",
    "java_runtime",
)

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)


bzl_library(
    name = "java-toolchain",
    srcs = [
        "repos.bzl",
        "rules.bzl",
        "testing.bzl",
    ],
)


## Java Runtime: `zulu`
## ------------------------
## Activates when we are running in IntelliJ/locally.
java_runtime(
    name = "zulu_runtime",
    java_home = "$(ZULUBASE)",
    visibility = ["//visibility:private"],
)


## -- Public Interface -- ##

## Java Runtime
## ------------------------
## References the active Java runtime.
alias(
    name = "java_runtime",
    actual = select({
        "//defs/conditions:zulu": ":zulu_runtime",
        "//conditions:default": "@embedded_jdk//:jdk",
    }),
)
