package(
    default_visibility = ["//visibility:public"],
)

load(
    "@npm_bazel_typescript//:index.bzl",
    _ts_devserver = "ts_devserver",
    _ts_library = "ts_library",
)

load("@io_bazel_rules_closure//closure:defs.bzl",
    _closure_js_test = "closure_js_test",
    _closure_js_library = "closure_js_library",
    _closure_js_binary = "closure_js_binary",
    _closure_js_template_library = "closure_js_template_library",
    _closure_js_deps = "closure_js_deps",
    _closure_css_library = "closure_css_library",
    _closure_css_binary = "closure_css_binary",
)


exports_files([
    "tsconfig.json",
])
