package(
    default_visibility = ["//visibility:public"],
)

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)


exports_files(glob([
    "*.txt",
]))

filegroup(
    name = "requirements",
    srcs = glob(["*.txt"]),
)

bzl_library(
    name = "python-toolchain",
    srcs = [
        "repos.bzl",
        "rules.bzl",
        "testing.bzl",
    ],
)
